# ChangeLog for sys-cluster/drbd
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/drbd/ChangeLog,v 1.32 2005/06/17 09:23:26 dholm Exp $

  17 Jun 2005; David Holm <dholm@gentoo.org> drbd-0.7.11.ebuild:
  Added to ~ppc.

*drbd-0.7.11 (17 Jun 2005)

  17 Jun 2005; Christian Zoffoli <xmerlin@gentoo.org> +drbd-0.7.11.ebuild:
  drbd-0.7.11 added to portage.

  14 Jun 2005; Christian Zoffoli <xmerlin@gentoo.org> drbd-0.7.10.ebuild:
  removed heartbeat runtime dependency. Closed bug #95660.

  15 Mar 2005; Christian Zoffoli <xmerlin@gentoo.org> files/drbd-0.7-init:
  better device handling in a udev env.

  13 Mar 2005; Christian Zoffoli <xmerlin@gentoo.org> files/drbd-0.7-init:
  fixed device check/creation closed bug #84871, thanks to joram agten
  <joramagten@hotmail.com>

  09 Mar 2005; Christian Zoffoli <xmerlin@gentoo.org> drbd-0.7.10.ebuild:
  removed inherit check-kernel

  02 Mar 2005; Christian Zoffoli <xmerlin@gentoo.org> drbd-0.7.10.ebuild:
  fixed compilation with 2.4 kernels (closed bug #83803)

  01 Mar 2005; Christian Zoffoli <xmerlin@gentoo.org> files/drbd-0.7-init:
  improved init script (now it works better with udev)

  23 Feb 2005; Christian Zoffoli <xmerlin@gentoo.org> drbd-0.7.10.ebuild:
  drbd-0.7.10 marked stable on x86

  23 Feb 2005; Christian Zoffoli <xmerlin@gentoo.org>
  -files/drbd-0.7.9-bio_patch_memory_overwrite.patch, -drbd-0.7.8.ebuild:
  removed old files

  03 Feb 2005; Jeremy Huddleston <eradicator@gentoo.org>
  drbd-0.6.12-r1.ebuild:
  inherit linux-info.

*drbd-0.7.10 (31 Jan 2005)

  31 Jan 2005; Christian Zoffoli <xmerlin@gentoo.org> +drbd-0.7.10.ebuild,
  -drbd-0.7.9-r1.ebuild, -drbd-0.7.9.ebuild:
  removed buggy 0.7.9 release

*drbd-0.7.10 (31 Jan 2005)

  31 Jan 2005; Christian Zoffoli <xmerlin@gentoo.org> +drbd-0.7.10.ebuild:
  release 0.7.10 (to fix the 0.7.9 disaster)

*drbd-0.7.9-r1 (27 Jan 2005)
