@@ -1,6 +1,11 @@
 # ChangeLog for sys-cluster/drbd
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/drbd/ChangeLog,v 1.32 2005/06/17 09:23:26 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/drbd/ChangeLog,v 1.33 2005/08/29 21:40:46 xmerlin Exp $
+
+*drbd-0.7.12 (29 Aug 2005)
+
+  29 Aug 2005; Christian Zoffoli <xmerlin@gentoo.org> +drbd-0.7.12.ebuild:
+  added drbd-0.7.12 to portage.
 
   17 Jun 2005; David Holm <dholm@gentoo.org> drbd-0.7.11.ebuild:
   Added to ~ppc.
